--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.cpython-36.pyc
 
 # C extensions
 *.so
@@ -13,7 +14,7 @@ develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
+.eggs/  
 lib/
 lib64/
 parts/
